Image margin and width set to prevent bleeding over in edge cases

--- a/src/styles.css
+++ b/src/styles.css
@@ -96,3 +96,8 @@ button {
   margin: 20px;
   width: 66%;
 }
+
+img {
+	margin: 20px;
+	width: 66%;
+}
